// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "faː kig siː faː gʊlh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "faː dɔdɔg siː faː gʊgʊlh",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "faː kig gɔkɪŋ æt faː ɹifaːɹ",
    },
    {
      "english": "the king does not see the wolf",
      "target": "faː kig nat siː faː gʊlh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "deːbeː βidt luːpuːum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "baːneː βidnθ luːpuːum",
    },
    {
      "english": "i give you the bread",
      "target": "ego daːd tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "deːbeː aːdduːlt sluːdeː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "deːbeː non βidt luːpuːum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "foːjeːpoːfeː soːjeːli lukin",
    },
    {
      "english": "the dogs see the wolves",
      "target": "soːsoːjeːli soːsoːjeːli lukin",
    },
    {
      "english": "i give you the bread",
      "target": "mi sina pala",
    },
    {
      "english": "the king walks at the river",
      "target": "foːjeːpoːfeː sapi fiːlaʂeːl leːl",
    },
    {
      "english": "the king does not see the wolf",
      "target": "foːjeːpoːfeː soːjeːli ala lukin",
    },
  ],
  "preset": "tokipona",
}
`;
